--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BOT_TOKEN = 'ТОКЕН ТВОЙ НАХУЙ'
-ADMIN_CHAT_ID = 'АЙДИ ЧАТА КУДА БОТ БУДЕТ ОТПРОАВЛЯТЬ ЗАКАЗЫ'
+BOT_TOKEN = 'set here'
+ADMIN_CHAT_ID = 'set here'
